fixing some styles on small screen

--- a/public/style.css
+++ b/public/style.css
@@ -323,6 +323,19 @@ input {
     padding-bottom: 0px;
   }
 
+  .beat-wrapper {
+    text-align: left;
+  }
+
+  .play-pause {
+    left: 0px;
+  }
+
+  .white-label {
+    margin-left: 30px;
+    display: block;
+  }
+
   header {
     text-align: center;
     font-family: Verdana, sans-serif;
@@ -332,8 +345,24 @@ input {
     padding: 30px 50px 50px 50px;
   }
 
-  header h1,p,a{
+  header a {
+    color: blue;
+  }
+
+  header a:hover {
+    color: white;
+  }
+
+  header h1,p{
     background: rgb(4, 46, 76);
+    padding: 8px;
+    border-radius: 5px;
+  }
+
+  .center-link {
+    background: rgb(4, 46, 76);
+    padding: 8px;
+    border-radius: 5px;
   }
 
   .controls {
@@ -341,6 +370,7 @@ input {
     padding-top: 20px;
     padding-bottom: 10px;
     border-radius: 9px;
+    min-width: 0px;
   }
 
 
